# Arbor

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: CI_CD.md
.github/images/: README.md
.github/workflows/: cpp-ci.yml  node-ci.yml
app/: globals.css  layout.tsx  page.tsx
app/api/ai/analyze/: route.ts
app/api/compute/montecarlo/: route.ts
app/api/compute/options/: route.ts
app/api/compute/orderbook/: route.ts
app/api/stock/overview/: route.ts
app/api/stock/quote/: route.ts
app/api/stock/timeseries/: route.ts
app/auth/login/: page.tsx
app/auth/sign-up/: page.tsx
app/dashboard/: page.tsx
components/: advanced-analytics.tsx  agent-panel.tsx  app-dashboard.tsx  chat-interface.tsx  company-info.tsx  dashboard-wrapper.tsx  dashboard.tsx  landing-page.tsx  market-data-parser.tsx  monte-carlo.tsx  options-pricer.tsx  order-book.tsx  portfolio-tracker.tsx  stock-card.tsx  stock-chart.tsx  stock-screener.tsx  technical-indicators.tsx
cpp/: CMakeLists.txt  README.md  binding.gyp  build.bat  build.sh
cpp/benchmarks/: README.md  analyze_benchmarks.py  lockfree_benchmark.cpp  montecarlo_benchmark.cpp  options_benchmark.cpp  orderbook_benchmark.cpp  production_benchmark.cpp
cpp/benchmarks/results/: lockfree_results_2025_01_14.json  lockfree_results_2026_02_04.json  montecarlo_results_2025_01_14.json  montecarlo_results_2026_02_04.json  options_results_2025_01_14.json  options_results_2026_01_28.json  options_results_2026_02_04.json  orderbook_results_2026_01_28.json  orderbook_results_2026_02_01.json  orderbook_results_2026_02_04.json  production_results_2026_02_04.json  test_results_2025_01_14.json
cpp/docs/: BENCHMARKS.md
cpp/include/: exchange_connector.hpp  fix_parser.hpp  itch_codec.hpp  lockfree_queue (1).hpp  lockfree_queue.hpp  market_data_parser.hpp  monte_carlo.hpp  network.hpp  options_pricing.hpp  orderbook.hpp  ouch_codec.hpp  perf_counters.hpp  position_manager.hpp  risk_manager.hpp  sbe_codec.hpp  simd_monte_carlo.hpp  technical_indicators.hpp
cpp/src/: market_data_parser.cpp  monte_carlo.cpp  node_bindings.cpp  options_pricing.cpp  orderbook.cpp  technical_indicators.cpp
cpp/tests/: CMakeLists.txt  codec_test.cpp  fix_test.cpp  lockfree_test.cpp  montecarlo_test.cpp  options_test.cpp  orderbook_test.cpp
lib/: arbor-engine.ts  cache.ts  types.ts
scripts/: 001_create_schema.sql
